<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.royijournogmail.myshoppinglist.AddItemToList"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/additemtoyourlist"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        android:textColor="@color/proName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/proName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="16dp"
        android:text="@string/description"
        android:textColor="@color/proDesc"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/proDesc"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/proName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/nameoftheproduct"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/proDesc"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <EditText
        android:id="@+id/proDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/descriptionontheproduct"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/proAdd"
        style="@android:style/Widget.Button"
        android:layout_width="135dp"
        android:layout_height="49dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/buttonsqure"
        android:text="@string/add_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proDesc" />


</android.support.constraint.ConstraintLayout>
