<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:weightSum="10" android:baselineAligned="false">

    <LinearLayout
        android:layout_weight="7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <TextView
                android:id="@+id/animal"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:text="@string/product"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/proName"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/_1_"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <TextView
                android:id="@+id/desc"
                android:layout_width="351dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/description1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/proDesc"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageicon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
          android:contentDescription="@string/todo"
        app:srcCompat="@drawable/icon_list" />

    </LinearLayout>
    </LinearLayout>
