<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.royijournogmail.myshoppinglist.listOfProduct">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="25">

        <TextView
            android:id="@+id/textView"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/your_products"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="16dp" />


        <ListView
            android:id="@+id/lv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="24"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="56dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/addItem"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@android:color/holo_orange_light"
                android:layout_weight="1"
                style="?android:attr/buttonBarStyle"
                android:text="@string/add_item" />

            <Button
                android:id="@+id/createList"
                android:background="@android:color/holo_orange_light"
                android:layout_width="150dp"
                android:layout_height="50dp"
                style="?android:attr/buttonBarStyle"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:text="@string/create_new_list"
                />
            <Button
                android:id="@+id/homeButton"
                android:background="@android:color/holo_orange_light"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="3dp"
                style="?android:attr/buttonBarStyle"
                android:layout_weight="1"
                android:text="@string/back_to_home" />
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
